syntax = "proto3";
package schildpad;

// [START java_declaration]
option java_multiple_files = true;
option java_package = "app.schildpad.schildpad.protos";
option java_outer_classname = "InstalledAppsProtos";
// [END java_declaration]

message App {
  string name = 1;
  string packageName = 2;

  message DrawableData{
    bytes data = 1;
  }

  DrawableData icon = 3;
}

message InstalledApps{
  repeated App apps = 1;
}